--- a/index.html
+++ b/index.html
@@ -10,7 +10,21 @@
       <p>
         After careful consideration and a generous grant from NASA, our team has determined that a woodchuck could chuck five wood, with a standard deviation of +/- .37 wood.
       </p>
-      <footer>posted by Chuck Wooden</footer>
+  <footer>posted by Chuck Wooden</footer>
+  
+  <br>
+
+  <form id="newComment" onSubmit="addComment()">
+    Add comment: <br>
+    <textarea id="commentText" cols="30" rows="10"></textarea> <br>
+    Your name: <input type="text" id="commenterName"><br>
+    <input type="submit">
+  </form>
+
+  
+  <div id="comments">
+  </div>
     </article>
   </body>
+
 </html>
